continue adding to landing page, start other pages

--- a/src/css/scss/abstracts/_variables.scss
+++ b/src/css/scss/abstracts/_variables.scss
@@ -26,7 +26,7 @@
  */
  $color-brand-primary: darkseagreen;
  $color-brand-primary-dark: #4c5f29;
- $color-brand-secondary: #65b5fa;
+ $color-brand-secondary: aliceblue;
  $color-brand-secondary-dark: #0171d3;
 
 /*
@@ -45,7 +45,7 @@ $color-gray-6: #444444;
 $color-gray-7: #222222;
 $color-black: #000;
 
-$color-background: #eff0f2;
+$color-background: #fafafa;
 
 $color-dim-50: rgba(0,0,0,0.5);
 $color-dim-70: rgba(0,0,0,0.7);
