--- a/src/css/scss/base/_body.scss
+++ b/src/css/scss/base/_body.scss
@@ -6,7 +6,7 @@
  * Body base styles
  */
 body {
-	background: $color-background;
+	background-color: $color-background;
 	color: $color-text-blue;
 	font: 100%/1.5 $font;
 	font-size: $font-size-med-2;
@@ -14,4 +14,5 @@ body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
+	overflow-x: hidden;
 }
