--- a/src/css/scss/layout/_landing.scss
+++ b/src/css/scss/layout/_landing.scss
@@ -39,3 +39,74 @@
         text-align: center;
     }
 }
+
+.aboutContainer {
+    min-height: 60vh;
+    background-color: $color-brand-secondary;
+    padding-top: 30px;
+    padding-left: 60px;
+
+    h2 {
+        padding: 70px 0 20px;
+    }
+
+    p {
+        padding-bottom: 20px;
+    }
+
+    .gohBold {
+        font-weight: bold;
+    }
+
+    img {
+        max-width: 65%;
+    }
+}
+
+
+.productsContainer {
+    min-height: 100vh;
+    padding-top: 30px;
+    text-align: center;
+
+    h2 {
+        padding: 30px 0;
+    }
+}
+
+.productsPlusArrows {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.c-figure {
+    display: none;
+}
+
+.c-figure__media {
+    img {
+        max-width: 650px;
+    }
+}
+
+.c-figure__caption {
+    max-width: 700px;
+    text-align: center;
+}
+
+.activeItem {
+    display: flex !important;
+    flex-direction: column;
+    align-items: center;
+}
+
+.productNav {
+
+    &:hover {
+        color: $color-gray-4;
+        cursor: pointer;
+    }
+
+    
+}
