--- a/src/css/scss/base/_body.scss
+++ b/src/css/scss/base/_body.scss
@@ -6,7 +6,7 @@
  * Body base styles
  */
 body {
-	background-color: $color-background;
+	background-color: #FFFFFF;
 	color: $color-text-blue;
 	font: 100%/1.5 $font;
 	font-size: $font-size-med-2;
