--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1172,7 +1172,7 @@ textarea {
   align-items: center;
   box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   padding: 0.5em 0;
-  background-color: #000;
+  background-color: #fff;
 }
 @media all and (min-height: 46.8em) {
   .c-header {
@@ -1454,7 +1454,6 @@ textarea {
 
 .c-logo-link {
   display: inline-block;
-  padding: 0.2rem 1rem;
 }
 
 /*------------------------------------*\
@@ -2213,7 +2212,7 @@ progress[value]::-webkit-progress-bar {
 }
 
 /*------------------------------------*\
-    $LANDING PAGE
+    $PAGE-SPECIFIC STYLES
 \*------------------------------------*/
 /*------------------------------------*\
     #LANDING PAGE
@@ -2309,6 +2308,48 @@ progress[value]::-webkit-progress-bar {
 .productNav:hover {
   color: #808080;
   cursor: pointer;
+}
+
+.agents {
+  padding-top: 30px;
+}
+.agents .intro Button {
+  margin-bottom: 50px;
+}
+
+.quickLinks {
+  display: flex;
+  min-height: 40vh;
+}
+.quickLinks .links {
+  flex: 70%;
+  display: flex;
+  flex-direction: column;
+}
+.quickLinks .links .buttonContainer {
+  display: flex;
+  height: 70%;
+  justify-content: space-evenly;
+  padding-bottom: 20px;
+}
+.quickLinks .links .buttonContainer .buttons {
+  flex: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.quickLinks .links .buttonContainer .buttons Button {
+  width: 70%;
+  margin-right: 20%;
+}
+.quickLinks .pic {
+  flex: 30%;
+}
+.quickLinks .pic img {
+  height: 90%;
+  width: 100%;
+  filter: grayscale(1);
 }
 
 /*------------------------------------*\
