--- a/src/css/scss/components/_header.scss
+++ b/src/css/scss/components/_header.scss
@@ -6,15 +6,14 @@
  * Header
  */
 .c-header {
+	position: sticky;
+	z-index: 1;
+	top: 0;
 	display: flex;
 	align-items: center;
 	box-shadow: 0px 3px 5px -2px rgba(0,0,0,0.2);
 	padding: 0.5em 0;
 	background-color: $color-white;
-	
-	@media all and (min-height: $bp-med) {
-		padding: 1em 0;
-	}
 }
 
 /**
