--- a/src/css/scss/layout/_landing.scss
+++ b/src/css/scss/layout/_landing.scss
@@ -93,6 +93,11 @@
 .c-figure__caption {
     max-width: 700px;
     text-align: center;
+
+    .captionTitle {
+        font-weight: bold;
+        font-style: normal !important;
+    }
 }
 
 .activeItem {
