--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -888,7 +888,7 @@ abbr {
   display: inline-block;
   line-height: 1;
   font-weight: bold;
-  padding: 1rem 2rem;
+  padding: 2rem 1rem;
   border: 0;
   border-radius: 6px;
   text-align: center;
@@ -1168,16 +1168,14 @@ textarea {
  * Header
  */
 .c-header {
+  position: sticky;
+  z-index: 1;
+  top: 0;
   display: flex;
   align-items: center;
   box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   padding: 0.5em 0;
   background-color: #fff;
-}
-@media all and (min-height: 46.8em) {
-  .c-header {
-    padding: 1em 0;
-  }
 }
 
 /**
@@ -1445,7 +1443,7 @@ textarea {
 \*------------------------------------*/
 .c-logo {
   display: block;
-  max-width: 200px;
+  max-width: 270px;
 }
 .c-box__header .c-logo {
   max-width: 12em;
@@ -2295,6 +2293,10 @@ progress[value]::-webkit-progress-bar {
   max-width: 700px;
   text-align: center;
 }
+.c-figure__caption .captionTitle {
+  font-weight: bold;
+  font-style: normal !important;
+}
 
 .activeItem {
   display: flex !important;
@@ -2350,6 +2352,34 @@ progress[value]::-webkit-progress-bar {
   height: 90%;
   width: 100%;
   filter: grayscale(1);
+}
+
+.extraPadding {
+  padding: 5rem !important;
+}
+
+h2 {
+  padding: 0 0 30px !important;
+}
+
+.splitContainer {
+  display: flex;
+}
+.splitContainer .half1 {
+  flex: 50%;
+}
+.splitContainer .half2 {
+  flex: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.splitContainer .half2 img {
+  height: 85% !important;
+}
+
+h2:nth-of-type(2) {
+  text-align: center;
 }
 
 /*------------------------------------*\
