--- a/src/css/scss/layout/_agents.scss
+++ b/src/css/scss/layout/_agents.scss
@@ -28,12 +28,17 @@
                 flex: 50%;
                 display: flex;
                 flex-direction: column;
-                justify-content: space-evenly;
+                justify-content: space-around;
                 align-items: center;
 
-                Button {
+                a {
                     width: 70%;
-                    margin-right: 20%;
+                    margin-right: 30%;
+                    text-align: center;
+
+                    Button {
+                        width: 120%;
+                    }
                 }
             }
         }
