--- a/src/css/scss/layout/_landing.scss
+++ b/src/css/scss/layout/_landing.scss
@@ -43,8 +43,9 @@
 .aboutContainer {
     min-height: 60vh;
     background-color: #f3f5f5;
-    padding-top: 30px;
     padding-left: 60px;
+    display: flex;
+    align-items: center;
 
     h2 {
         padding: 70px 0 20px;
