--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -147,6 +147,7 @@ So feel free to use any of these approaches. Or don't. It's totally up to you.
 @import "scss/layout/agents";
 @import "scss/layout/about";
 @import "scss/layout/products";
+@import "scss/layout/contact";
 
 
 /*------------------------------------*\
