add to product pages and product section in main menu

--- a/src/css/scss/abstracts/_variables.scss
+++ b/src/css/scss/abstracts/_variables.scss
@@ -24,7 +24,7 @@
  *    second-tier application colors.
  *
  */
- $color-brand-primary: rgb(202, 235, 202);
+ $color-brand-primary: darkseagreen;
  $color-brand-primary-dark: #4c5f29;
  $color-brand-secondary: aliceblue;
  $color-brand-secondary-dark: #0171d3;
