--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -704,7 +704,7 @@ abbr {
 }
 .c-block-hero:hover .c-block-hero__headline, .c-block-hero:focus .c-block-hero__headline {
   background: #444444;
-  color: #caebca;
+  color: darkseagreen;
 }
 
 /*------------------------------------*\
@@ -720,7 +720,7 @@ abbr {
   transition: all 0.2s ease;
 }
 .c-block-media:hover .c-block-media__headline, .c-block-media:focus .c-block-media__headline {
-  color: #caebca;
+  color: darkseagreen;
 }
 .c-block-media--small {
   font-size: 0.875rem;
@@ -812,7 +812,7 @@ abbr {
 }
 .c-block-tout:hover .c-block-tout__headline, .c-block-tout:focus .c-block-tout__headline {
   padding-bottom: 2rem;
-  color: #caebca;
+  color: darkseagreen;
 }
 
 /*------------------------------------*\
@@ -898,7 +898,7 @@ abbr {
   text-align: center;
   transition: background 0.2s ease;
   box-shadow: 1px 1px 4px #808080;
-  background: #caebca;
+  background: darkseagreen;
   color: #222222;
   /**
    * Disabled button
@@ -952,7 +952,7 @@ abbr {
   transition: all 0.2s ease;
 }
 .c-text-btn:hover, .c-text-btn:focus {
-  color: #caebca;
+  color: darkseagreen;
 }
 .c-text-btn:hover:after, .c-text-btn:focus:after {
   right: -28px;
@@ -968,7 +968,7 @@ abbr {
   background: #a5a5a5;
 }
 .c-btn--overlay:hover, .c-btn--overlay:focus {
-  background-color: #caebca !important;
+  background-color: darkseagreen !important;
 }
 
 /*------------------------------------*\
@@ -1757,7 +1757,7 @@ textarea {
   width: 3rem;
   height: 0.5rem;
   bottom: 0;
-  background: #caebca;
+  background: darkseagreen;
 }
 
 /*------------------------------------*\
@@ -2403,10 +2403,6 @@ h2 {
   padding: 5%;
 }
 
-h2:nth-of-type(2) {
-  text-align: center;
-}
-
 #lori {
   align-items: center !important;
 }
@@ -2431,15 +2427,75 @@ h2:nth-of-type(2) {
   padding-bottom: 56.25%;
   position: relative;
   height: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .video-responsive iframe {
-  left: 0;
-  top: 0;
+  height: 90%;
+  width: 80%;
+  position: absolute;
+}
+
+.disabilityGraphics img {
+  width: 50%;
+}
+
+.disabilityVideo {
+  text-align: center;
+  padding: 2rem 0;
+}
+
+.productLinks {
+  text-align: center;
+}
+
+.annuityList {
+  display: flex;
+  padding: 50px 0;
+}
+.annuityList .left {
+  flex: 30%;
+  padding: 0 40px;
+  display: flex;
+  align-items: center;
+}
+.annuityList .right {
+  flex: 70%;
+}
+
+.fa-check {
+  padding-right: 5px;
+  color: darkseagreen;
+}
+
+.lifeList {
+  display: flex;
+  padding: 20px 0;
+}
+.lifeList .left {
+  flex: 30%;
+  padding-left: 30px;
+}
+.lifeList .right {
+  flex: 70%;
+  padding-left: 60px;
+}
+
+.calculators {
+  display: flex;
+  width: 90vw;
+  text-align: center;
+  margin: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
+  height: 740px;
+}
+.calculators iframe {
+  width: 50%;
+  margin: 15px 0;
   height: 100%;
   width: 100%;
-  position: absolute;
-  padding: 15px 0;
 }
 
 /*------------------------------------*\
@@ -2476,7 +2532,7 @@ h2:nth-of-type(2) {
 }
 
 .sg-primary {
-  background-color: #caebca;
+  background-color: darkseagreen;
 }
 
 .sg-primary-dark {
