Enhance UI Elements

--- a/src/css/scss/components/_footer-nav.scss
+++ b/src/css/scss/components/_footer-nav.scss
@@ -38,10 +38,12 @@
  */
 .c-footer-nav__link {
 	a {
+		font-size: 1rem;
 		font-weight: bold;
 		display: block;
 		padding: 1rem 2rem 1rem 0;
 		color: $color-white;
+		text-transform: uppercase;
 		
 		&:hover, &:focus {
 			color: $color-gray-3;
