--- a/src/css/scss/layout/_landing.scss
+++ b/src/css/scss/layout/_landing.scss
@@ -99,6 +99,7 @@
     .captionTitle {
         font-weight: bold;
         font-style: normal !important;
+        text-transform: uppercase;
     }
 }
 
