--- a/src/css/scss/components/_primary-nav.scss
+++ b/src/css/scss/components/_primary-nav.scss
@@ -44,7 +44,9 @@
  * Nav Links
  */
 .c-primary-nav__link {
+	font-size: 1rem;
 	font-weight: bold;
 	display: block;
 	padding: 1rem;
+	text-transform: uppercase;
 }
