--- a/src/css/scss/layout/_products.scss
+++ b/src/css/scss/layout/_products.scss
@@ -1,4 +1,12 @@
+.productBoxContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .productBox {
-    padding: 1rem;
+    padding: 2rem;
     background-color: aliceblue;
+    margin-bottom: 3rem;
+    width: 80%;
 }
