remove fragments, do linked benefits page

--- a/src/css/scss/layout/_products.scss
+++ b/src/css/scss/layout/_products.scss
@@ -92,3 +92,14 @@
         width: 100%;
     }
 }
+
+.ltcGraphics {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    padding-bottom: 20px;
+}
+
+.ltcVideo {
+    text-align: center;
+}
