--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2561,6 +2561,17 @@ h2 {
   width: 100%;
 }
 
+.ltcGraphics {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  padding-bottom: 20px;
+}
+
+.ltcVideo {
+  text-align: center;
+}
+
 /*------------------------------------*\
     $STYLE GUIDE
 \*------------------------------------*/
