--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -178,6 +178,8 @@ So feel free to use any of these approaches. Or don't. It's totally up to you.
 /**
  * Body base styles
  */
+@import url("https://fonts.googleapis.com/css?family=Quicksand:500,700|Roboto:400,500,700&display=swap");
+@import url("//cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css");
 body {
   background-color: #FFFFFF;
   color: #050c39;
@@ -2629,6 +2631,10 @@ h2 {
   line-height: initial;
   vertical-align: initial;
   margin: 0px;
+}
+
+#ixn-agency-quoter input, #ixn-agency-quoter select:before, #ixn-agency-quoter select:afterafter {
+  display: none;
 }
 
 #ixn-agency-quoter p {
