--- a/src/css/scss/layout/_products.scss
+++ b/src/css/scss/layout/_products.scss
@@ -179,3 +179,8 @@
   padding: 10px;
   border: 1px solid #e5e5e5;
 }
+
+.bottomBorder {
+  border-bottom: 5px solid black;
+  margin-bottom: 100px;
+}
